--- a/cnab-derive/Cargo.toml
+++ b/cnab-derive/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
 name = "cnab-derive"
-version = "0.1.0"
-edition = "2024"
+version.workspace = true
+authors.workspace = true
+edition.workspace = true
+license.workspace = true
+repository.workspace = true
+
+description = "Macro derive interna para o crate cnab-fixed-width."
 
 [lib]
 proc-macro = true
